[project]
name = "bria-sdk"
version = "0.1.0"
description = "Python SDK for Bria.ai v2 API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest",
    "requests-mock",
    "pytest-cov",
    "ruff>=0.13.0",
    "black>=25.1.0",
]
